# glimmer

./: BUILD.md  CMakeLists.txt  Changes1601.patch  build.sh  build_dependencies.sh  build_fix.patch  changescode.patch  codechanges.patch  config.h  context.h  glimmer.h  im_font_manager.cpp  im_font_manager.h  imrichtext.cpp  platform.cpp  platform_config.h  renderer.cpp  types.h  utils.h
src/: context.cpp  im_font_manager.cpp  layout.cpp  platform.cpp  platform.h  renderer.cpp  style.cpp  types.h  utils.h  widgets.cpp
src/libs/src/: imrichtext.cpp  imrichtextutils.cpp
